[workspace]
members = [
  "token-lending/cli",
  "token-lending/program",
  "token/program",
]
exclude = [
  "themis/client_ristretto",
  "themis/program_ristretto",
  "token/perf-monitor", # TODO: Rework perf-monitor to use solana-program-test, avoiding the need to link directly with the BPF VM
]

[profile.dev]
split-debuginfo = "unpacked"
